# norm

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
planning_and_decisions/: norm-concept.html  norm-concept.md  norm-decisions.html  norm-requirements.html  norm-requirements.json
planning_and_decisions/concept_and_requirement_details/: 01-preprocess-window-coverage.html  01-preprocess-window-coverage.md  02-preprocess-row-invalidation.html  02-preprocess-row-invalidation.md  03-prompt-id-definition.html  03-prompt-id-definition.md  04-window-stride-edge-cases.html  04-window-stride-edge-cases.md  05-time-argument-semantics.html  05-time-argument-semantics.md  06-capture-duration-rule.html  06-capture-duration-rule.md  07-idle-gap-accumulation.html  07-idle-gap-accumulation.md  08-dedupe-hash-inputs.html  08-dedupe-hash-inputs.md  09-uninitialized-store-behavior.html  09-uninitialized-store-behavior.md  10-prune-cascade-semantics.html  10-prune-cascade-semantics.md  11-export-include-default.html  11-export-include-default.md  12-interval-report-storage.html  12-interval-report-storage.md  13-failure-exit-code-precedence.html  13-failure-exit-code-precedence.md  14-cli-surface-and-flag-config-mapping.html  14-cli-surface-and-flag-config-mapping.md  15-output-string-contract.html  15-output-string-contract.md  16-inference-test-seam.html  16-inference-test-seam.md  17-no-inference-server-verification.html  17-no-inference-server-verification.md  18-encryption-at-rest-verification.html  18-encryption-at-rest-verification.md  19-keychain-key-and-acl-verification.html  19-keychain-key-and-acl-verification.md  20-negative-security-properties.html  20-negative-security-properties.md  (+13 more)
src/norm/: __init__.py  __main__.py  artifacts.py  blobs.py  capture.py  cli.py  config.py  crypto.py  daemon.py  errors.py  fsutil.py  hashing.py  inference.py  passphrase.py  report.py  session.py  store.py  timerange.py
src/norm/commands/: __init__.py  config.py  export.py  init.py  list_cmd.py  passwd.py  (+5 more)
tests/: conftest.py  test_capture.py  test_config.py  test_crypto.py  test_devtools.py  test_export.py  test_global.py  test_hashing.py  test_init.py  test_interval_gap.py  test_list.py  test_model_provisioning.py  test_passphrase.py  test_passwd.py  test_prune.py  test_record.py  test_record_loop.py  test_report.py  test_report_planning.py  test_security_invariants.py  test_show.py  test_status.py  test_store.py  test_timerange.py
tools/: __init__.py
tools/normdev/: __init__.py  __main__.py  concept.py  decisions.py  harness.py  requirements.py  run.py  smoke.py
